--- a/Application.Web.Client/PageComponents/IndividualOrder.razor
+++ b/Application.Web.Client/PageComponents/IndividualOrder.razor
@@ -1,27 +1,33 @@
 ﻿@using System.Text.RegularExpressions
 
+<tr scope="row">
+    <td>@Order.OrderId</td>
+    <td>@Order.TourId</td>
+    <td>@Order.TourOperatorId</td>
+    <td>@Order.UserId</td>
+    <AuthorizeView Roles="Admin">
+        <NotAuthorized>
 
-    <tr scope="row">
-        <td>@Order.OrderId</td>
-        <td>@Order.TourId</td>
-        <td>@Order.TourOperatorId</td>
-        <td>@Order.UserId</td>
-        <td>
-            <div class="btn-group my-3 text-center" role="group">
-                <button type="button" class="btn btn-outline-info" @onclick="(() => OnEditOrder.InvokeAsync(Order))">
-                    <i class="fas fa-edit"></i>
-                </button>
-            </div>
+        </NotAuthorized>
+        <Authorized>
+            <td>
+                <div class="btn-group my-3 text-center" role="group">
+                    <button type="button" class="btn btn-outline-info" @onclick="(() => OnEditOrder.InvokeAsync(Order))">
+                        <i class="fas fa-edit"></i>
+                    </button>
+                </div>
 
-        </td>
-        <td>
-            <div class="btn-group my-3 text-center" role="group">
-                <button type="button" class="btn btn-outline-danger" @onclick="(() => OnDeleteOrder.InvokeAsync(Order))">
-                    <i class="fas fa-trash-alt"></i>
-                </button>
-            </div>
-        </td>
-    </tr>
+            </td>
+            <td>
+                <div class="btn-group my-3 text-center" role="group">
+                    <button type="button" class="btn btn-outline-danger" @onclick="(() => OnDeleteOrder.InvokeAsync(Order))">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                </div>
+            </td>
+        </Authorized>
+    </AuthorizeView>
+</tr>
 
 
 @code {
@@ -33,5 +39,5 @@
     [Parameter]
     public EventCallback<Order> OnEditOrder { get; set; }
 
-    
+
 }
