Изменила кнопку регистрации

--- a/Application.Desktop/RegWindow.xaml
+++ b/Application.Desktop/RegWindow.xaml
@@ -23,7 +23,7 @@
             <Label>Пароль</Label>
             <TextBox x:Name="pass_tb"></TextBox>
 
-            <Button  Style="{DynamicResource buttonFind}" Margin="0,20,0,0">Войти</Button>
+            <Button  Style="{DynamicResource buttonFind}" Margin="0,20,0,0">Зарегистрироваться</Button>
         </StackPanel>
     </Grid>
 </Window>
