--- a/Application.Web.Client/Shared/NavMenu.razor
+++ b/Application.Web.Client/Shared/NavMenu.razor
@@ -27,7 +27,7 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin">
+            <AuthorizeView Roles="Admin, User">
                 <NotAuthorized>
                 </NotAuthorized>
                 <Authorized>
