--- a/Application.Web.Client/PageComponents/TourList.razor
+++ b/Application.Web.Client/PageComponents/TourList.razor
@@ -31,7 +31,7 @@ else
     <div class="row ">
         @foreach (var item in ListOfItems)
         {
-            <IndividualGame Tour="item" OnDeleteTour="DeleteTour" OnEditTour="EditTour" />
+            <IndividualTour Tour="item" OnDeleteTour="DeleteTour" OnEditTour="EditTour" />
         }
     </div>
 }
