--- a/Application.Web.Client/Pages/Index.razor
+++ b/Application.Web.Client/Pages/Index.razor
@@ -9,7 +9,7 @@
     </ResultTemplate>
 </Typeahead>
 
-<GameList ListOfItems="tourItemsList" />
+<TourList ListOfItems="tourItemsList" />
 
 @code
 {
