--- a/Application.Web.Client/Shared/MainLayout.razor.css
+++ b/Application.Web.Client/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #EE6420 0%, #FFE477 70%);
 }
 
 .top-row {
@@ -31,40 +31,40 @@ main {
         text-overflow: ellipsis;
     }
 
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
+    @media (max-width: 640.98px) {
+        .top-row:not(.auth) {
+            display: none;
+        }
+
+        .top-row.auth {
+            justify-content: space-between;
+        }
+
+        .top-row a, .top-row .btn-link {
+            margin-left: 0;
+        }
     }
 
-    .top-row.auth {
-        justify-content: space-between;
-    }
+    @media (min-width: 641px) {
+        .page {
+            flex-direction: row;
+        }
 
-    .top-row a, .top-row .btn-link {
-        margin-left: 0;
-    }
-}
+        .sidebar {
+            width: 250px;
+            height: 100vh;
+            position: sticky;
+            top: 0;
+        }
 
-@media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
+        .top-row {
+            position: sticky;
+            top: 0;
+            z-index: 1;
+        }
 
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
+        .top-row, article {
+            padding-left: 2rem !important;
+            padding-right: 1.5rem !important;
+        }
     }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
-}
