--- a/Application.Desktop/App.xaml
+++ b/Application.Desktop/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Application.Desktop"
-             StartupUri="MainWindow.xaml">
+             StartupUri="AuthWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="FontSize" Value="14"/>
