--- a/Application.Desktop/RegWindow.xaml
+++ b/Application.Desktop/RegWindow.xaml
@@ -4,26 +4,34 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Application.Desktop"
+        xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
         mc:Ignorable="d"
-        Title="RegWindow" Height="300" Width="400" 
+        Title="Регистрация" Height="468" Width="400" 
         Icon="Icons/logoIcon.png" 
         WindowStartupLocation="CenterScreen" 
         WindowStyle="SingleBorderWindow" 
         MinHeight="300" MinWidth="400">
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Grid  HorizontalAlignment="Center" >
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="43*"></RowDefinition>
+            <RowDefinition Height="223*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Button Grid.Row="0" Click="Button_Click" Style="{DynamicResource buttonFind}" Height="40" >Войти</Button>
-
+        <Button Grid.Row="0"  Style="{DynamicResource buttonFind}" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Click="Button_Click_1" >Войти</Button>
         <StackPanel Grid.Row="1" >
             <Label>Логин</Label>
-            <TextBox x:Name="FIO_tb"></TextBox>
+            <TextBox x:Name="login_tb"></TextBox>
             <Label>Пароль</Label>
             <TextBox x:Name="pass_tb"></TextBox>
 
-            <Button Click="Button_Click" Style="{DynamicResource buttonFind}" Margin="0,20,0,0">Войти</Button>
+            <Label>Повторите пароль</Label>
+            <TextBox x:Name="pass2_tb"></TextBox>
+            <Label>ФИО</Label>
+            <TextBox x:Name="fio_tb"></TextBox>
+            <Label>Дата</Label>
+            <TextBox  x:Name="date_tb"></TextBox>
+            <Label>Телефон</Label>
+            <TextBox x:Name="phone_tb"></TextBox>
+            <Button  Style="{DynamicResource buttonFind}" Margin="0,20,0,0" Click="Button_Click">Зарегистрироваться</Button>
         </StackPanel>
     </Grid>
 </Window>
