--- a/Application.Web.Client/PageComponents/TourList.razor
+++ b/Application.Web.Client/PageComponents/TourList.razor
@@ -21,7 +21,11 @@ else if (ListOfItems.Count == 0)
     </div>
 }
 else
-{
+{ <div class="row text-center">
+      <div class="col">
+         
+      </div>
+  </div>
     <div class="typeahead">
         <div class="typeahead-contols">
             <input type="text" class="typeahead-input" autocomplete="off" placeholder="New Name..." @bind="newTourName">
