--- a/Application.Mobile/Application.Mobile/App.xaml
+++ b/Application.Mobile/Application.Mobile/App.xaml
@@ -2,32 +2,31 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Application.Mobile.App">
+    <!--
+        Define global resources and styles here, that apply to all pages in your app.
+    -->
     <Application.Resources>
         <ResourceDictionary>
-            <Style TargetType="Label">
-                <Setter Property="TextColor" Value="Black"/>
-                <Setter Property="FontSize" Value="14" />
-
+            <Color x:Key="Primary">#2196F3</Color>
+            <Style TargetType="Button">
+                <Setter Property="TextColor" Value="White"></Setter>
+                <Setter Property="VisualStateManager.VisualStateGroups">
+                    <VisualStateGroupList>
+                        <VisualStateGroup x:Name="CommonStates">
+                            <VisualState x:Name="Normal">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
+                                </VisualState.Setters>
+                            </VisualState>
+                            <VisualState x:Name="Disabled">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor" Value="#332196F3" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateGroupList>
+                </Setter>
             </Style>
-            <Style x:Key="buttonOrdStyle" TargetType="Button">
-                <Setter Property="TextColor" Value="Black" />
-                <Setter Property="BackgroundColor" Value="#FFE477" />
-                <Setter Property="FontSize" Value="14" />
-                <Setter Property="CornerRadius" Value="5"/>
-                <Setter Property="FontAttributes" Value="Bold"/>
-                <Setter Property="Margin" Value="5,0,5,5"/>
-            </Style>
-            <Style x:Key="buttonPodStyle" TargetType="Button">
-                <Setter Property="TextColor" Value="White" />
-                <Setter Property="BackgroundColor" Value="#4FB6CA" />
-                <Setter Property="FontSize" Value="14" />
-                <Setter Property="CornerRadius" Value="5"/>
-                <Setter Property="FontAttributes" Value="Bold"/>
-            </Style>
-            <Style TargetType="Picker">
-                <Setter Property="TextColor" Value="Black" />
-                <Setter Property="FontSize" Value="14" />
-            </Style>
-        </ResourceDictionary>
+        </ResourceDictionary>        
     </Application.Resources>
 </Application>
