--- a/Application.Mobile/Application.Mobile/AppShell.xaml
+++ b/Application.Mobile/Application.Mobile/AppShell.xaml
@@ -84,7 +84,9 @@
     <FlyoutItem Title="Browse" Icon="icon_feed.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
-
+    <FlyoutItem Title="Tour" Icon="icon_feed.png">
+        <ShellContent Route="BooksPage" ContentTemplate="{DataTemplate local:Books}" />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
