--- a/Application.MobileClient/Application.MobileClient/Views/AddTour.xaml
+++ b/Application.MobileClient/Application.MobileClient/Views/AddTour.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Application.MobileClient.Views.Views.Tours.AddTour">
+             x:Class="Application.MobileClient.Views.AddTour">
     <ContentPage.Content>
         <ScrollView Margin="20">
             <StackLayout>
