--- a/Application.MobileClient/Application.MobileClient/Views/Tours.xaml
+++ b/Application.MobileClient/Application.MobileClient/Views/Tours.xaml
@@ -22,6 +22,8 @@
                                            CommandParameter="{Binding}"/>
                             </SwipeItems>
                         </SwipeView.RightItems>
+                        <Grid>
+                        <Label Text="Все доступные туры:"></Label>
                         <Frame BorderColor="Black" CornerRadius="1">
                             <StackLayout Padding="10">
 
@@ -47,6 +49,7 @@
                                 <Label Text="{Binding Description}" FontSize="Subtitle" />
                             </StackLayout>
                         </Frame>
+                        </Grid>
                     </SwipeView>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
