--- a/Application.MobileClient/Application.MobileClient/AppShell.xaml
+++ b/Application.MobileClient/Application.MobileClient/AppShell.xaml
@@ -3,6 +3,7 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:tours="clr-namespace:Application.MobileClient.Views"
        xmlns:views="clr-namespace:Application.MobileClient.Views;assembly=Application.MobileClient"
+       xmlns:mobileClient="clr-namespace:Application.MobileClient;assembly=Application.MobileClient"
        Title="Application.MobileClient"
        x:Class="Application.MobileClient.AppShell">
 
@@ -25,7 +26,7 @@
     </Shell.Resources>
 
     <TabBar>
-        <ShellContent Title="Tours" Icon="icon_about.png" Route="ToursPage" ContentTemplate="{DataTemplate views:Tours}" />
+        <ShellContent Title="MainPage" Icon="icon_about.png" Route="MainPage" ContentTemplate="{DataTemplate mobileClient:MainPage}" />
     </TabBar>
 
 </Shell>
