Перенесен макет проекта мобильного на основу

--- a/Application.MobileClient/Application.MobileClient/AppShell.xaml
+++ b/Application.MobileClient/Application.MobileClient/AppShell.xaml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       xmlns:tours="clr-namespace:Application.MobileClient.Views"
-       xmlns:views="clr-namespace:Application.MobileClient.Views;assembly=Application.MobileClient"
+       xmlns:mobileClient="clr-namespace:Application.MobileClient;assembly=Application.MobileClient"
        Title="Application.MobileClient"
        x:Class="Application.MobileClient.AppShell">
 
@@ -25,7 +24,7 @@
     </Shell.Resources>
 
     <TabBar>
-        <ShellContent Title="Tours" Icon="icon_about.png" Route="ToursPage" ContentTemplate="{DataTemplate views:Tours}" />
+        <ShellContent Title="Tours" Icon="icon_about.png" Route="ToursPage" ContentTemplate="{DataTemplate mobileClient:MainPage}" />
     </TabBar>
 
 </Shell>
